fix: add docker image publishing
Signed-off-by: Ilya Lesikov <ilya@lesikov.com>

--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -1,9 +1,12 @@
 name: test:pr
 on:
   pull_request:
+    branches-ignore:
+      - 'release-please--**'
 
 jobs:
   test:
+    if: ${{ !startsWith(github.head_ref, 'release-please--') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
