--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+# remove this block when fixed: https://github.com/anthropics/claude-code/issues/17087
+/.bash_profile
+/.bashrc
+/.gitconfig
+/.gitmodules
+/.mcp.json
+/.profile
+/.ripgreprc
+/.zprofile
+/.zshrc
+
 /bin/
 /.task/
